--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,20 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px 0;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-section {
-    padding: 20px;
-    margin: 10px;
-}
-
-section#home img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
-
-.project {
-    margin-bottom: 20px;
-}
-
-.project img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 15px 0;
-    position: relative; /* Changed from fixed to relative */
+.bg-black {
+    background-color: black;
+  }
+  .font-div {
+    width: 30%;
+  }
+  img {
     width: 100%;
-    height: auto; /* Allows dynamic height */
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-    font-size: 0.9em;
-}
-
-
+    height: 100%;
+  }
+  /* responsive*/
+  @media only screen and (min-width: 1199px) {
+    .font-div {
+      padding: 52px 0px !important;
+    }
+  }
+  
+  .fa:hover {
+    opacity: 0.7;
+  }
